стилизовал текст, добавил фоновые изображения для блоков, сделал обводки для крупных блоков

--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,1 +1,48 @@
-// Начните писать стили здесь
+/*fonts*/
+@import "fonts.less";
+
+/*global*/
+@import "global/global.less";
+
+/*container*/
+@import "blocks/container.less";
+
+/*page-header*/
+@import "blocks/page-header.less";
+
+/*main-nav*/
+@import "blocks/main-nav.less";
+
+/*site-menu*/
+@import "blocks/site-menu.less";
+
+/*page-main*/
+@import "blocks/page-main.less";
+
+/*program*/
+@import "blocks/program.less";
+
+/*program-type*/
+@import "blocks/program-type.less";
+
+/*advantages*/
+@import "blocks/advantages.less";
+
+/*title*/
+@import "blocks/title.less";
+
+/*example*/
+@import "blocks/example.less";
+
+/*toggle-controls*/
+@import "blocks/toggle-controls.less";
+
+/*page-footer*/
+@import "blocks/page-footer.less";
+
+/*button*/
+@import "blocks/button.less";
+
+@import "variables.less";
+
+@import "blocks/page-body.less";
