--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -1,7 +1,7 @@
 .program {
   color: @basik-white;
   font-family: @oswald;
-  background-image: url(/img/cat-index.png);
+  background-image: url("../img/cat-index.png");
   background-repeat: no-repeat;
   background-size: 320px 302px;
 }
