--- a/source/less/style.less
+++ b/source/less/style.less
@@ -2,16 +2,10 @@
 @import "fonts.less";
 
 /*global*/
-@import "global/global.less";
+@import "global.less";
 
 /*container*/
 @import "blocks/container.less";
-
-/*page-header*/
-@import "blocks/page-header.less";
-
-/*main-nav*/
-@import "blocks/main-nav.less";
 
 /*site-menu*/
 @import "blocks/site-menu.less";
@@ -25,8 +19,6 @@
 /*program-type*/
 @import "blocks/program-type.less";
 
-/*advantages*/
-@import "blocks/advantages.less";
 
 /*title*/
 @import "blocks/title.less";
@@ -43,6 +35,8 @@
 /*button*/
 @import "blocks/button.less";
 
+/*variables*/
 @import "variables.less";
 
+/*page-body*/
 @import "blocks/page-body.less";
