--- a/source/less/blocks/button.less
+++ b/source/less/blocks/button.less
@@ -1,6 +1,6 @@
 .button {
   font-family: @oswald;
   text-transform: uppercase;
-  color: @basik-white;
+  color: @basic-white;
   background-color: @basic_green;
 }
