--- a/source/less/blocks/program-type.less
+++ b/source/less/blocks/program-type.less
@@ -1,4 +1,8 @@
 .program-type {
+  outline: 5px solid red;
+  outline-offset: -5px;
+  width: 280px;
+  margin: 0 auto;
   background-color: @basic_grey;
 }
 
@@ -6,7 +10,7 @@
   font-family: @oswald;
   font-size: 24px;
   line-height: 37px;
-  color: @basik-black;
+  color: @basic-black;
   text-transform: uppercase;
 }
 
@@ -14,5 +18,5 @@
   font-family: @oswald;
   font-size: 16px;
   line-height: 16px;
-  color: @basik-black;
+  color: @basic-black;
 }
