--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -1,5 +1,5 @@
 .program {
-  color: @basik-white;
+  color: @basic-white;
   font-family: @oswald;
   background-image: url("../img/cat-index.png");
   background-repeat: no-repeat;
