--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -1,26 +1,21 @@
 /* oswald-regular - latin */
 @font-face {
   font-family: "Oswald";
+  src: local(""),
+    url("../fonts/oswaldregular.woff2") format("woff2"),
+    url("../fonts/oswaldregular.woff") format("woff");
   font-style: normal;
   font-weight: 400;
-  src: url("../fonts/oswaldregular.eot"); /* IE9 Compat Modes */
-  src: local(""),
-    url("../fonts/oswaldregular.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("../fonts/oswaldregular.woff2") format("woff2"), /* Super Modern Browsers */
-    url("../fonts/oswaldregular.woff") format("woff"), /* Modern Browsers */
-    url("../fonts/oswaldregular.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("../fonts/oswaldregular.svg#Oswald") format("svg"); /* Legacy iOS */
+  font-display: swap;
 }
 /* oswald-700 - latin */
 @font-face {
   font-family: "Oswald";
+  src: url("../fonts/oswaldmedium.eot");
+  src: local(""),
+    url("../fonts/oswaldmedium.woff2") format("woff2"),
+    url("../fonts/oswaldmedium.woff") format("woff");
   font-style: normal;
   font-weight: 700;
-  src: url("../fonts/oswaldmedium.eot"); /* IE9 Compat Modes */
-  src: local(""),
-    url("../fonts/oswaldmedium.eot?#iefix") format("embedded-opentype"), /* IE6-IE8 */
-    url("../fonts/oswaldmedium.woff2") format("woff2"), /* Super Modern Browsers */
-    url("../fonts/oswaldmedium.woff") format("woff"), /* Modern Browsers */
-    url("../fonts/oswaldmedium.ttf") format("truetype"), /* Safari, Android, iOS */
-    url("../fonts/oswaldmedium.svg#Oswald") format("svg"); /* Legacy iOS */
+  font-display: swap;
 }
