--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,3 +1,9 @@
+/*variables*/
+@import "variables.less";
+
+/*normalize*/
+@import "node_modules/normalize.less/normalize.less";
+
 /*fonts*/
 @import "fonts.less";
 
@@ -6,6 +12,15 @@
 
 /*container*/
 @import "blocks/container.less";
+
+/*button*/
+@import "blocks/button.less";
+
+/*title*/
+@import "blocks/title.less";
+
+/*page-heade*/
+@import "blocks/page-header.less";
 
 /*site-menu*/
 @import "blocks/site-menu.less";
@@ -19,10 +34,6 @@
 /*program-type*/
 @import "blocks/program-type.less";
 
-
-/*title*/
-@import "blocks/title.less";
-
 /*example*/
 @import "blocks/example.less";
 
@@ -31,12 +42,6 @@
 
 /*page-footer*/
 @import "blocks/page-footer.less";
-
-/*button*/
-@import "blocks/button.less";
-
-/*variables*/
-@import "variables.less";
 
 /*page-body*/
 @import "blocks/page-body.less";
