--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -2,7 +2,7 @@
   font-family: @oswald;
   font-size: 24px;
   line-height: 24px;
-  color: @basik-black;
+  color: @basic-black;
 }
 
 .example__definition {
@@ -13,5 +13,5 @@
 .example__expenses {
   font-family: @oswald;
   line-height: 20px;
-  color: @basik-black;
+  color: @basic-black;
 }
