--- a/source/less/blocks/site-menu.less
+++ b/source/less/blocks/site-menu.less
@@ -1,12 +1,3 @@
-.page-header__main-nav {
-  color: @basik-black;
-  font-family: @oswald;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 20px;
-  text-transform: uppercase;
-}
-
 .site-menu__link {
-  color: @basik-black;
+  color: @basic-black;
 }
