--- a/source/less/blocks/toggle-controls.less
+++ b/source/less/blocks/toggle-controls.less
@@ -1,6 +1,6 @@
 .toggle-controls__it-was-after {
   font-family: @oswald;
-  color: @basik-black;
+  color: @basic-black;
   text-transform: uppercase;
   font-size: 16px;
   line-height: 20px;
