--- a/source/less/global.less
+++ b/source/less/global.less
@@ -15,7 +15,7 @@ input[type="radio"].visually-hidden {
 }
 
 body {
-  width: 320px;
+  min-width: 320px;
   margin: 0;
   padding: 0;
   font-size: 14px;
