Убрал лишнюю строку

--- a/source/less/fonts.less
+++ b/source/less/fonts.less
@@ -1,7 +1,7 @@
 /* oswald-regular - latin */
 @font-face {
   font-family: "Oswald";
-  src: local(""),
+  src:
     url("../fonts/oswaldregular.woff2") format("woff2"),
     url("../fonts/oswaldregular.woff") format("woff");
   font-style: normal;
@@ -12,7 +12,7 @@
 @font-face {
   font-family: "Oswald";
   src: url("../fonts/oswaldmedium.eot");
-  src: local(""),
+  src:
     url("../fonts/oswaldmedium.woff2") format("woff2"),
     url("../fonts/oswaldmedium.woff") format("woff");
   font-style: normal;
