стилизация страницы формы

--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -13,3 +13,17 @@
 .page-main__example {
   margin-bottom: 25px;
 }
+
+.page-main__wrapper {
+  font-family: @oswald;
+  color: @basic-black;
+}
+
+.page-main__title {
+  font-size: 36px;
+  line-height: 36px;
+}
+
+.page-main__text {
+  text-transform: uppercase;
+}
