--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -1,6 +1,7 @@
 @arial: "Arial", sans-serif;
 @oswald: "Oswald", Arial, sans-serif;
 @special-dark-grey: #444444;
+@special-grey: #222222;
 @special-black: #111111;
 @basic-black: #000000;
 @basic-white: #FFFFFF;
