Стилизовал страницу каталога

--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -20,8 +20,10 @@
 }
 
 .page-main__title {
+  font-family: @oswald;
   font-size: 36px;
   line-height: 36px;
+  color: @special-black;
 }
 
 .page-main__text {
