--- a/source/less/style.less
+++ b/source/less/style.less
@@ -48,3 +48,18 @@
 
 /*form*/
 @import "blocks/form.less";
+
+/*wrapper-all-goods*/
+@import "blocks/wrapper-all-goods.less";
+
+/*catalog-additional-goods*/
+@import "blocks/catalog-additional-goods.less";
+
+/*additional-goods*/
+@import "blocks/additional-goods.less";
+
+/*present*/
+@import "blocks/present.less";
+
+/*product*/
+@import "blocks/product.less";
