--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -1,11 +1,11 @@
-.product__title {
+.card__title {
   font-family: @oswald;
   color: @special-grey;
   font-size: 16px;
   line-height: 20px;
 }
 
-.product__list {
+.card__list {
   font-size: 12px;
   line-height: 16px;
 }
