Сделал адаптивную сетку крупных блоков

--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -3,4 +3,12 @@
   outline-offset: -5px;
   width: 280px;
   margin: 0 auto;
+
+  @media (min-width: @tablet-width) {
+    width: 707px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1220px;
+  }
 }
