--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -2,16 +2,33 @@
   margin-bottom: 22px;
 }
 
-.page-main__program-type {
-  margin-bottom: 20px;
-}
+.page-main__program-type-wrapper {
+  margin: 0 auto;
+  margin-bottom: 27px;
 
-.page-main__advantages {
-  margin-bottom: 60px;
+  @media (min-width: @tablet-width) {
+    margin-bottom: 45px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 1220px;
+    margin-bottom: 71px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-column-gap: 80px;
+  }
 }
 
 .page-main__example {
-  margin-bottom: 25px;
+  background-color: @background-grey;
+
+  @media (min-width: @tablet-width) {
+    background-color: @basic-white;
+  }
+
+  @media (min-width: @desktop-width) {
+    background-color: @basic-white;
+  }
 }
 
 .page-main__wrapper {
