--- a/source/less/blocks/program-type.less
+++ b/source/less/blocks/program-type.less
@@ -4,6 +4,15 @@
   width: 280px;
   margin: 0 auto;
   background-color: @basic_grey;
+
+  @media (min-width: @tablet-width) {
+    width: 708px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin: 0 0;
+    width: 570px;
+  }
 }
 
 .program-type__title {
@@ -12,6 +21,7 @@
   line-height: 37px;
   color: @basic-black;
   text-transform: uppercase;
+  margin: 0;
 }
 
 .program-type__link {
@@ -19,4 +29,8 @@
   font-size: 16px;
   line-height: 16px;
   color: @basic-black;
+}
+
+.program-type__text {
+  margin: 0;
 }
