--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -10,11 +10,24 @@
   line-height: 20px;
 }
 
-.page-footer__map {
-  width: 320px;
-  height: 362px;
+@media (min-width: @tablet-width) {
+  .page-footer__container {
+    display: flex;
+    justify-content: space-between;
+  }
 }
 
+@media (min-width: @desktop-width) {
+  .page-footer__container {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .page-footer__map {
+    width: 100%;
+    height: 400px;
+  }
+}
 
 .page-footer__copyright-link {
   font-size: 16px;
