--- a/source/less/style.less
+++ b/source/less/style.less
@@ -19,8 +19,14 @@
 /*title*/
 @import "blocks/title.less";
 
-/*page-heade*/
+/*page*/
+@import "blocks/page.less";
+
+/*page-header*/
 @import "blocks/page-header.less";
+
+/*main-nav*/
+@import "blocks/main-nav.less";
 
 /*site-menu*/
 @import "blocks/site-menu.less";
@@ -34,14 +40,23 @@
 /*program-type*/
 @import "blocks/program-type.less";
 
+/*advantages*/
+@import "blocks/advantages.less";
+
 /*example*/
 @import "blocks/example.less";
+
+/*result*/
+@import "blocks/result.less";
 
 /*toggle-controls*/
 @import "blocks/toggle-controls.less";
 
 /*page-footer*/
 @import "blocks/page-footer.less";
+
+/*address*/
+@import "blocks/address.less";
 
 /*page-body*/
 @import "blocks/page-body.less";
