--- a/source/less/variables.less
+++ b/source/less/variables.less
@@ -7,3 +7,8 @@
 @basic-white: #FFFFFF;
 @basic_grey: #F2F2F2;
 @basic_green: #68B738;
+@background-grey: #EAEAEA;
+
+@tablet-width: 768px;
+@desktop-width: 1440px;
+@mobile-width-only: 768px;
