--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -6,13 +6,17 @@
   list-style: none;
   margin: 0;
   padding: 0;
+}
 
-  @media (min-width: @tablet-width) {
+@media (min-width: @tablet-width) {
+  .advantages__list {
     display: grid;
     grid-template-columns: 1fr 1fr;
   }
+}
 
-  @media (min-width: @desktop-width) {
+@media (min-width: @desktop-width) {
+  .advantages__list {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
   }
@@ -21,12 +25,16 @@
 .advantages__item {
   width: 256px;
   margin-bottom: 20px;
+}
 
-  @media (min-width: @tablet-width) {
+@media (min-width: @tablet-width) {
+  .advantages__item {
     width: 230px;
   }
+}
 
-  @media (min-width: @desktop-width) {
+@media (min-width: @desktop-width) {
+  .advantages__item {
     width: 230px;
   }
 }
