--- a/source/less/blocks/result.less
+++ b/source/less/blocks/result.less
@@ -1,5 +1,13 @@
 .result {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  margin: 0;
+}
+
+@media (min-width: @tablet-width) {
+  .result {
+    width: 366px;
+  }
 }
 
 .result__description {
