--- a/source/less/blocks/site-menu.less
+++ b/source/less/blocks/site-menu.less
@@ -1,7 +1,14 @@
+.site-menu__item {
+  border-bottom: 2px solid black;
+}
+
+
 .site-menu__link {
   color: @basic-black;
+}
 
-  @media (min-width: @desktop-width) {
+@media (min-width: @desktop-width) {
+  .site-menu__link {
     color: @basic-white;
   }
 }
