--- a/source/less/style.less
+++ b/source/less/style.less
@@ -25,6 +25,9 @@
 /*page-header*/
 @import "blocks/page-header.less";
 
+/*container-header*/
+@import "blocks/container-header.less";
+
 /*main-nav*/
 @import "blocks/main-nav.less";
 
