--- a/source/less/blocks/address.less
+++ b/source/less/blocks/address.less
@@ -1,3 +1,8 @@
+.address__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 @media (min-width: @tablet-width) {
   .address__wrapper {
     display: flex;
@@ -8,13 +13,14 @@
 @media (min-width: @desktop-width) {
   .address {
     position: relative;
+    min-height: 400px;
   }
 
   .address__wrapper {
-    position: absolute;
     width: 570px;
-    background-color: @basic-white;
+    position: absolute;
     left: 0;
-    top: 95px;
+    top: 85px;
+    background-color: @basic-white;
   }
 }
