--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -1,5 +1,18 @@
+.example__text {
+  margin: 0;
+}
+
+.example__expenses {
+  font-family: @oswald;
+  line-height: 20px;
+  color: @basic-black;
+  margin: 0;
+  align-self: center;
+}
+
+
 @media (min-width: @tablet-width) {
-  .example__container {
+  .example__result-container {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
@@ -12,6 +25,10 @@
     grid-template-columns: 1fr 1fr;
   }
 
+  .example__result-container {
+    display: block;
+  }
+
   .example__container {
     display: block;
   }
@@ -19,10 +36,4 @@
   .example__text {
     width: 436px;
   }
-}
-
-.example__expenses {
-  font-family: @oswald;
-  line-height: 20px;
-  color: @basic-black;
 }
