--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,31 +1,46 @@
-
 .page-footer__slogan {
   font-family: @oswald;
   font-size: 16px;
   text-transform: uppercase;
   color: @special-black;
+  width: 140px;
 }
 
 .page-footer__text {
   line-height: 20px;
+  width: 140px;
+}
+
+.page-footer__container {
+  background-color: @basic_grey;
 }
 
 @media (min-width: @tablet-width) {
   .page-footer__container {
     display: flex;
     justify-content: space-between;
+    background-color: @basic_grey;
   }
 }
 
 @media (min-width: @desktop-width) {
+  .page-footer {
+    position: relative;
+  }
+
   .page-footer__container {
     display: flex;
     justify-content: space-between;
+    background-color: @basic-white;
   }
 
   .page-footer__map {
+    position: absolute;
     width: 100%;
     height: 400px;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
   }
 }
 
