--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,20 +1,17 @@
 .page-header {
-  width: 320px;
   display: flex;
   flex-direction: column;
-  outline: 5px solid red;
-  outline-offset: -5px;
+}
 
-  @media (min-width: @tablet-width) {
-    width: 707px;
-    margin: 0 auto;
+@media (min-width: @tablet-width) {
+  .page-header {
     flex-direction: row;
     justify-content: space-between;
   }
+}
 
-  @media (min-width: @desktop-width) {
-    margin: 0 auto;
-    width: 1220px;
+@media (min-width: @desktop-width) {
+  .page-header {
     flex-direction: row;
     justify-content: space-between;
   }
@@ -43,12 +40,16 @@
 
 .page-header__logo-image {
   height: 39px;
+}
 
-  @media (min-width: @tablet-width) {
+@media (min-width: @tablet-width) {
+  .page-header__logo-image {
     height: 50px;
   }
+}
 
-  @media (min-width: @desktop-width) {
+@media (min-width: @desktop-width) {
+  .page-header__logo-image {
     height: 60px;
   }
 }
