--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -1,37 +1,57 @@
+
 .program {
   color: @basic-white;
   font-family: @oswald;
-  background-image: url("../img/cat-index.png");
+  background-color: @basic_green;
+  background-image: url("../img/mobile-index-cat.png");
   background-repeat: no-repeat;
-  background-size: 320px 302px;
-
-  @media (min-width: @tablet-width) {
-    background-image: none;
-  }
-}
-
-.program__wrapper-title {
-  font-size: 36px;
-  line-height: 36px;
-
-  @media (min-width: @tablet-width) {
-    color: @basic-black;
-  }
-
-  @media (min-width: @desktop-width) {
-    color: @basic-black;
-  }
 }
 
 .program__text {
   text-transform: uppercase;
   line-height: 14px;
+  margin: 0;
+}
 
-  @media (min-width: @tablet-width) {
+.program__wrapper-title {
+  margin: 0;
+  font-size: 36px;
+  line-height: 36px;
+}
+
+@media (min-width: @tablet-width) {
+  .program {
+    background-image: none;
+    background-color: transparent;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .program {
+    background-color: transparent;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .program__wrapper-title {
     color: @basic-black;
   }
+}
 
-  @media (min-width: @desktop-width) {
+@media (min-width: @desktop-width) {
+  .program__wrapper-title {
+    color: @basic-black;
+  }
+}
+
+@media (min-width: @tablet-width) {
+  .program__text {
+    color: @basic-black;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .program__text {
     color: @basic-black;
   }
 }
