--- a/source/less/global.less
+++ b/source/less/global.less
@@ -14,6 +14,10 @@ input[type="radio"].visually-hidden {
   overflow: hidden;
 }
 
+.page {
+  box-sizing: border-box;
+}
+
 body {
   min-width: 320px;
   margin: 0;
