--- a/source/less/blocks/container-header.less
+++ b/source/less/blocks/container-header.less
@@ -1,4 +1,4 @@
-.container-header {
+/*.container-header {
   flex-direction: column;
   outline: 5px solid red;
   outline-offset: -5px;
@@ -19,3 +19,5 @@
     width: 1220px;
   }
 }
+
+*/
