--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -7,6 +7,9 @@
   .page-header {
     flex-direction: row;
     justify-content: space-between;
+    margin: 0 auto;
+    padding: 0 30px;
+    width: 707px;
   }
 }
 
@@ -14,6 +17,9 @@
   .page-header {
     flex-direction: row;
     justify-content: space-between;
+    margin: 0 auto;
+    padding: 0 110px;
+    width: 1220px;
   }
 }
 
