--- a/source/less/blocks/program.less
+++ b/source/less/blocks/program.less
@@ -5,6 +5,7 @@
   background-color: @basic_green;
   background-image: url("../img/mobile-index-cat.png");
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .program__text {
