--- a/source/less/blocks/site-menu.less
+++ b/source/less/blocks/site-menu.less
@@ -9,6 +9,10 @@
 
 @media (min-width: @desktop-width) {
   .site-menu__link {
-    color: @basic-white;
+    color: @basic-black;
+  }
+
+  .site-menu__link--color {
+    color: @basic-black;
   }
 }
