--- a/source/less/blocks/page-body.less
+++ b/source/less/blocks/page-body.less
@@ -5,7 +5,7 @@
   align-content: start;
 }
 
-@media (min-width: @desktop-width) {
+/*@media (min-width: @desktop-width) {
   .page-body {
     background-image: url("../img/cat-index.png");
     background-repeat: no-repeat;
@@ -13,3 +13,4 @@
     background-size: 720px 694px;
   }
 }
+*/
