--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -36,8 +36,13 @@
 }
 
 .page-main__wrapper {
+  margin: 0 auto;
+  width: 280px;
+  padding: 0 20px;
   font-family: @oswald;
   color: @basic-black;
+  outline: 5px solid red;
+  outline-offset: -5px;
 }
 
 .page-main__title {
@@ -45,13 +50,55 @@
   font-size: 36px;
   line-height: 36px;
   color: @special-black;
+  margin: 0;
+  padding-top: 27px;
 }
 
 .page-main__text {
+  margin: 0;
   text-transform: uppercase;
+  width: 226px;
+  padding-top: 37px;
+  padding-bottom: 39px;
 }
 
 .page-main__advantages {
   padding-top: 27px;
   padding-bottom: 42px;
+}
+
+@media (min-width: @tablet-width) {
+  .page-main__wrapper {
+    margin: 0 auto;
+    width: 631px;
+    padding-left: 71px;
+    padding-right: 66px;
+  }
+
+  .page-main__text {
+    width: 320px;
+  }
+
+  .page-main__title {
+    margin-left: 31px;
+  }
+}
+
+
+@media (min-width: @desktop-width) {
+  .page-main__wrapper {
+    margin: 0 auto;
+    width: 1220px;
+    padding: 0 110px;
+    outline: 5px solid red;
+    outline-offset: -5px;
+  }
+
+  .page-main__text {
+    width: 320px;
+  }
+
+  .page-main__title {
+    margin: 0;
+  }
 }
