--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -31,7 +31,7 @@
   .page-footer__container {
     display: flex;
     justify-content: space-between;
-    background-color: @basic-white;
+    background-color: @basic_grey;
   }
 
   .page-footer__map {
