--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -1,6 +1,6 @@
 .container {
-  outline: 5px solid red;
-  outline-offset: -5px;
+  /*  outline: 5px solid red;
+  outline-offset: -5px;*/
   width: 280px;
   margin: 0 auto;
   padding: 0 20px;
