--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -11,7 +11,12 @@
 .form__group-grid {
   width: 280px;
   margin: 0 auto;
+  margin-bottom: 20px;
   padding: 0 20px;
+}
+
+.form__wrapper-cat-data {
+  margin-bottom: 20px;
 }
 
 .form__radio-grid {
@@ -30,27 +35,29 @@
   justify-content: space-between;
   flex-wrap: wrap;
   margin: 0;
-  padding-bottom: 20px;
+  margin-bottom: 20px;
+
+  &:last-child {
+    margin-bottom: 0;
+  }
 }
 
-.form__grid--padding {
-  padding-bottom: 0;
-}
-
-.form__group--padding {
-  padding-bottom: 27px;
-}
-
-.form--input {
+.form__input {
   flex-grow: 1;
   padding-top: 12px;
   padding-bottom: 12px;
+  padding-left: 14px;
+  padding-right: 14px;
 }
 
-.form__group-radio {
+.form__group--textarea {
+  margin-top: 31px;
+  margin-bottom: 34px;
+}
+
+.form__group--radio {
   border-top: 1px solid black;
   border-bottom: 1px solid black;
-  margin-bottom: 20px;
 }
 
 .form__border {
@@ -102,10 +109,6 @@
   padding-bottom: 30px;
 }
 
-.form__group-textarea {
-  padding-bottom: 34px;
-}
-
 .form__container-small {
   display: flex;
   flex-wrap: wrap;
@@ -139,7 +142,7 @@
     display: block;
   }
 
-  .form__group-radio {
+  .form__group--radio {
     border: none;
   }
 
@@ -162,7 +165,6 @@
 
   .form__wrapper-cat-data {
     border: none;
-    padding-bottom: 26px;
   }
 
   .form__textarea-comment {
@@ -216,6 +218,11 @@
     width: 570px;
     padding: 0;
     margin: 0;
+    margin-bottom: 20px;
+  }
+
+  .form__grid:last-child {
+    margin: 0;
   }
 
   .form__radio-grid {
@@ -224,13 +231,7 @@
     margin: 0;
   }
 
-  .form__cat-data {
-    padding: 0;
-    margin: 0;
-    padding-bottom: 20px;
-  }
-
-  .form__group-radio {
+  .form__group--radio {
     padding: 0;
     margin: 0;
   }
@@ -241,13 +242,8 @@
     grid-column-gap: 80px;
   }
 
-  .form__сat-owner {
-    width: 570px;
-  }
-
-  .form__group-textarea {
-    padding: 0;
-    padding-bottom: 67px;
+  .form__grid--desctop {
+    margin: 0;
   }
 
   .form__textarea-comment {
@@ -262,5 +258,7 @@
 
   .form__submit {
     width: 568px;
+    padding: 0;
+    margin: 0;
   }
 }
