--- a/source/less/blocks/form.less
+++ b/source/less/blocks/form.less
@@ -8,7 +8,7 @@
   flex-direction: column;
 }
 
-.form__group-grid {
+.form__group--grid {
   width: 280px;
   margin: 0 auto;
   margin-bottom: 20px;
@@ -84,6 +84,7 @@
   font-size: 24px;
   line-height: 26px;
   padding: 0;
+  margin: 0;
   margin-bottom: 32px;
   text-transform: none;
 }
@@ -98,7 +99,7 @@
   content: "";
   position: absolute;
   width: 40%;
-  top: 35px;
+  top: 15px;
   right: 0;
   height: 3px;
   background-color: @basic_green;
@@ -174,7 +175,7 @@
     border: 1px solid black;
   }
 
-  .form__group-grid {
+  .form__group--grid {
     width: 630px;
     padding-right: 61px;
     padding-left: 71px;
@@ -184,7 +185,7 @@
     content: "";
     position: absolute;
     width: 40%;
-    top: 35px;
+    top: 15px;
     right: 0;
     height: 3px;
     background-color: @basic_green;
@@ -194,7 +195,7 @@
     content: "";
     position: absolute;
     width: 5%;
-    top: 35px;
+    top: 15px;
     left: 0;
     height: 3px;
     background-color: @basic_green;
@@ -247,7 +248,7 @@
     justify-content: space-between;
   }
 
-  .form__group-grid {
+  .form__group--grid {
     width: 570px;
     padding: 0;
     margin: 0;
@@ -258,7 +259,7 @@
     content: "";
     position: absolute;
     width: 60%;
-    top: 35px;
+    top: 15px;
     right: 0;
     height: 3px;
     background-color: @basic_green;
@@ -268,7 +269,7 @@
     content: "";
     position: absolute;
     width: 5%;
-    top: 35px;
+    top: 15px;
     left: 0;
     height: 3px;
     background-color: @basic_green;
