--- a/source/less/blocks/card.less
+++ b/source/less/blocks/card.less
@@ -1,11 +1,140 @@
+.card {
+  border-bottom: 1px solid black;
+  margin-top: 25px;
+  padding-bottom: 24px;
+}
+
 .card__title {
   font-family: @oswald;
   color: @special-grey;
   font-size: 16px;
   line-height: 20px;
+  width: 76px;
+  padding: 0;
+  margin: 0;
+  margin-bottom: 18px;
 }
 
 .card__list {
   font-size: 12px;
   line-height: 16px;
+  width: 140px;
+  display: grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+  margin: 0;
+  padding: 0;
+  margin-bottom: 22px;
+}
+
+
+.card__wrapper {
+  width: 280px;
+  margin: 0 auto;
+  padding: 0 20px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card__definition {
+  margin: 0;
+  padding: 0;
+}
+
+.card__description {
+  text-align: right;
+  margin: 0;
+  padding: 0;
+}
+
+.card__image--min {
+  margin-right: 30px;
+  margin-left: 36px;
+  margin-top: 14px;
+}
+
+.card__image--max {
+  margin-right: 26px;
+  margin-left: 26px;
+  margin-top: 11px;
+}
+
+.card__link--button {
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  width: 280px;
+  height: 20px;
+}
+
+@media (min-width: @tablet-width) {
+  .card {
+    border: none;
+    background-color: @basic_grey;
+    width: 324px;
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+
+  .card__wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .card__title {
+    width: 120px;
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  .card__list {
+    width: 250px;
+  }
+
+  .card__definition {
+    border-bottom: 1px solid black;
+  }
+
+  .card__description {
+    border-bottom: 1px solid black;
+  }
+
+  .card__link--button {
+    width: 250px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .card {
+    width: 245px;
+  }
+
+  .card__wrapper {
+    width: 245px;
+    padding: 0;
+  }
+
+  .card__title {
+    width: 120px;
+    text-align: center;
+    margin: 0 auto;
+  }
+
+  .card__list {
+    width: 180px;
+  }
+
+  .card__definition {
+    border-bottom: 1px solid black;
+  }
+
+  .card__description {
+    border-bottom: 1px solid black;
+  }
+
+  .card__link--button {
+    width: 180px;
+  }
 }
