--- a/source/less/blocks/container.less
+++ b/source/less/blocks/container.less
@@ -6,7 +6,7 @@
 
 @media (min-width: @tablet-width) {
   .container {
-    width: 707px;
+    width: 708px;
     padding: 0 30px;
   }
 
@@ -18,12 +18,13 @@
 
 @media (min-width: @desktop-width) {
   .container {
-    margin: 0 auto;
     width: 1220px;
+    padding: 0 110px;
   }
 
   .container--flex {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
   }
 }
