--- a/source/less/blocks/site-menu.less
+++ b/source/less/blocks/site-menu.less
@@ -7,7 +7,17 @@
   color: @basic-black;
 }
 
+@media (min-width: @tablet-width) {
+  .site-menu__item {
+    border: none;
+  }
+}
+
 @media (min-width: @desktop-width) {
+  .site-menu__item {
+    border: none;
+  }
+
   .site-menu__link {
     color: @basic-black;
   }
