--- a/source/less/style.less
+++ b/source/less/style.less
@@ -67,8 +67,8 @@
 /*form*/
 @import "blocks/form.less";
 
-/*wrapper-all-goods*/
-@import "blocks/wrapper-all-goods.less";
+/*all-goods*/
+@import "blocks/all-goods.less";
 
 /*catalog-additional-goods*/
 @import "blocks/catalog-additional-goods.less";
@@ -81,3 +81,9 @@
 
 /*product*/
 @import "blocks/card.less";
+
+/*additional-goods-product*/
+@import "blocks/additional-goods-product";
+
+/*product*/
+@import "blocks/product.less";
