--- a/source/less/blocks/catalog-additional-goods.less
+++ b/source/less/blocks/catalog-additional-goods.less
@@ -1,6 +1,26 @@
-.catalog-additional-goods__title {
+.page-main__line-title {
   font-family: @oswald;
   color: @basic-black;
+  margin: 0 auto;
+  padding: 0;
   font-size: 24px;
   line-height: 24px;
+  border-bottom: 1px solid black;
+}
+
+@media (min-width: @tablet-width) {
+  .page-main__line-title {
+    border-bottom: none;
+    text-align: left;
+  }
+
+  .additional-goods-product__link {
+    display: block;
+    width: 632px;
+    height: 9px;
+    text-align: center;
+    margin: 0 auto;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
 }
